<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewLine1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/name2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewLine1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nameET"/>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/edit_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/nameL"
        app:layout_constraintBottom_toBottomOf="@id/nameL"
        app:layout_constraintStart_toEndOf="@id/nameL"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/wohnOrtL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/wohnort"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/wohnOrtET"/>

    <EditText
        android:id="@+id/wohnOrtET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/edit_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/wohnOrtL"
        app:layout_constraintBottom_toBottomOf="@id/wohnOrtL"
        app:layout_constraintStart_toEndOf="@id/wohnOrtL"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/senden"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/wohnOrtL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/anzeigeTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/anzeigetv"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendB" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/switchB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/switch_view"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/anzeigeTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchB"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>