<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:background="@android:color/white"
        android:padding="12dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/abril_fatface"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/text"
            android:background="@android:color/white"
            android:padding="12dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/abril_fatface"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/edit_text"
            android:background="@android:color/white"
            android:padding="12dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/abril_fatface"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/text"
            android:background="@android:color/white"
            android:padding="12dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/abril_fatface"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/edit_text"
            android:background="@android:color/white"
            android:padding="12dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/abril_fatface" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/buttonText"
        android:background="@android:color/white"
        android:padding="12dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/abril_fatface"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/text"
        android:background="@android:color/white"
        android:padding="12dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/abril_fatface"
        android:layout_weight="1"/>

</LinearLayout>