<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/textLine1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLine2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLine1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/edit_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textLine2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textLine2"
        app:layout_constraintTop_toTopOf="@id/textLine2" />

    <TextView
        android:id="@+id/textLine3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLine2" />


    <EditText
        android:id="@+id/wohnOrtET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/edit_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textLine3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textLine3"
        app:layout_constraintTop_toTopOf="@id/textLine3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:fontFamily="@font/abril_fatface"
        android:padding="12dp"
        android:text="@string/buttonText"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLine3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/my_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendB" />

</androidx.constraintlayout.widget.ConstraintLayout>